--- a/index.html
+++ b/index.html
@@ -49,9 +49,19 @@
       <div class="usluga">
         <h3>Izgradnja niskogradnje</h3>
         <p>Kompletna izgradnja niskogradnje sistemom ključ u ruke.</p>
-      </div>
-    </div>
-  </section>
+        
+   <!-- Portfolio -->
+<section id="portfolio">
+  <h2>Naši radovi</h2>
+  <div class="portfolio-grid">
+    <img src="img/portfolio/rad1.jpg" alt="Rad 1">
+    <img src="img/portfolio/rad2.jpg" alt="Rad 2">
+    <img src="img/portfolio/rad3.jpg" alt="Rad 3">
+    <img src="img/portfolio/rad4.jpg" alt="Rad 4">
+    <img src="img/portfolio/rad5.jpg" alt="Rad 5">
+    <img src="img/portfolio/rad6.jpg" alt="Rad 6">
+  </div>
+</section>
 
   <!-- O nama -->
   <section id="onama">
