--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="usluge-grid">
       <div class="usluga">
         <h3>Adaptacija</h3>
-        <p>Kupatila, stanova ili kuća - sistemom ključ u ruke.</p>
+        <p>KUPATILA, STANA ili KUĆE - Sistemom KLJUČ u ruke.</p>
       </div>
       <div class="usluga">
         <h3>Niskogradnja</h3>
@@ -78,7 +78,7 @@
   </section>
 
   <footer>
-    <p>© 2025 ASSERIA Gradnja j.d.o.o. | Sva prava pridržana</p>
+    <p>© 2022 ASSERIA Gradnja j.d.o.o. | Sva prava pridržana</p>
     <div class="social-icons">
       <a href="https://instagram.com/asseria_gradnja" target="_blank"><i class="fab fa-instagram"></i></a>
       <a href="https://tiktok.com/@adaptacije_asseria" target="_blank"><i class="fab fa-tiktok"></i></a>
